--- a/LLMs.ipynb
+++ b/LLMs.ipynb
@@ -45,6 +45,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -476,6 +483,46 @@
     "\n",
     "print(\"Setup complete! ✅\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'genai-job-agents-5rfBW_Ap-py3.12 (Python 3.12.6)' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/Users/lilly/Library/Caches/pypoetry/virtualenvs/genai-job-agents-5rfBW_Ap-py3.12/bin/python -m pip install ipykernel -U --force-reinstall'"
+     ]
+    }
+   ],
+   "source": [
+    "# example how to run the tts \n",
+    "\n",
+    "# # From your parent directory script:\n",
+    "# from tts import generate_speech\n",
+    "\n",
+    "# # Generate speech\n",
+    "# output = generate_speech(\n",
+    "#     text=\"Überprüfen Sie ob alle in der Lieferungen enthaltenen Komponenten vorhanden sind.\",\n",
+    "#     output_file=\"output.wav\",\n",
+    "#     reference_audio=\"Germany_second.wav\",  # Note: path is relative to where you run the script\n",
+    "#     language=\"de\"\n",
+    "# )\n",
+    "\n",
+    "# print(f\"Speech generated and saved to {output}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -494,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
