--- a/RAG_LLM.ipynb
+++ b/RAG_LLM.ipynb
@@ -2613,7 +2613,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\NIKO9\\AppData\\Local\\Temp\\ipykernel_11704\\1546971082.py:149: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "C:\\Users\\NIKO9\\AppData\\Local\\Temp\\ipykernel_28704\\1546971082.py:149: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
       "  embeddings = HuggingFaceEmbeddings(\n",
       "c:\\Users\\NIKO9\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
@@ -2640,96 +2640,119 @@
       "LLM erfolgreich initialisiert\n",
       "\n",
       " ASISSTANT --- Schritt 1: Montage der Komponenten ---\n",
-      "Folgende Schritte sind für die Montage der Komponenten durchzuführen:\n",
+      "Für die Montage der Komponenten führen Sie diese Arbeitsschritte durch:\n",
       "\n",
-      "✓ Anbringen Sie HKH 9102-M für 38mm Mastdurchmesser verwenden\n",
+      "• Positionieren Sie HKH 9102-M für 38mm Mastdurchmesser verwenden\n",
       "\n",
-      "2. Einrichten Sie:\n",
-      "   - Transporthalter HKH 8860\n",
-      "   - CARDIOHELP Emergency Drive in Transportbox sichern\n",
+      "2. Einrichten Sie Transporthalter HKH 8860, CARDIOHELP Emergency Drive in Transportbox sichern\n",
       "\n",
-      " USER> ja\n",
+      " USER> ok\n",
       "\n",
-      "Ausgezeichnet! Der nächste Schritt wartet auf Sie.\n",
+      "Alles klar! Gehen wir weiter zum nächsten Schritt.\n",
       "\n",
       " ASISSTANT --- Schritt 2: Anschluss von Sensoren und externen Systemen ---\n",
-      "Gehen Sie für die Anschluss von Sensoren und externen Systemen wie folgt vor:\n",
+      "1. Anschließen der Sensoren:\n",
+      "                    - Stecker anhand der roten Markierungen ausrichten\n",
+      "                    - Externe Geräte verbinden:\n",
+      "                        - Datenaufzeichnungssystem über USB-Typ-B\n",
+      "                        - externes Alarmsystem\n",
+      "                    - Venösen Messkopf anschließen:\n",
+      "                        - An \"Venöser Messkopf\"-Anschluss und in Halterung platzieren\n",
+      "                    - Sensorkabel für Einmalprodukt verbinden:\n",
+      "                        - Vor dem Einschalten anschließen für korrekte Erkennung\n",
       "\n",
-      "1. Koppeln Sie Stecker anhand der roten Markierungen ausrichten\n",
+      "                Schritt 3: Einrichten der Geräte und Systeme\n",
       "\n",
-      "✓ Anklemmen Sie:\n",
-      "   - Datenaufzeichnungssystem über USB-Typ-B\n",
-      "   - externes Alarmsystem\n",
+      "                Wichtig:\n",
+      "                1. Formulieren Sie präzise Anweisungen in natürlichem Deutsch\n",
+      "                2. Verwenden Sie nummerierte Schritte\n",
+      "                3. Beginnen Sie mit einer kurzen Einleitung\n",
+      "                4. Vermeiden Sie Wiederholungen und Floskeln\n",
       "\n",
-      "3. Verbinden Sie An \"Venöser Messkopf\"-Anschluss und in Halterung platzieren\n",
+      "                Details zum Schritt:\n",
+      "                Geräte einrichten:\n",
+      "                    - Datenaufzeichnungssystem einrichten:\n",
+      "                        - Startmenü öffnen\n",
+      "                        - \"Einstellungen\" auswählen\n",
+      "                        - \"Datenaufzeichnung einrichten\" auswählen\n",
+      "                        - \"Typ A\" auswählen\n",
+      "                        - \"Standard\" auswählen\n",
+      "                        - \"Speichern\" auf \"OK\" klicken\n",
+      "                    - externes Alarmsystem einrichten:\n",
+      "                        - Gerät aus dem Schutzmodus herausnehmen\n",
+      "                        - Sensoren an den entsprechenden Anschlüssen anordnen\n",
+      "                        - Gerät wieder in den Schutzmodus stellen\n",
+      "                    - Venösen Messkopf einrichten:\n",
+      "                        - Messkopf in Halterung platzieren\n",
+      "                        - Sensorkabel an \"Venöser Messkopf\"-Anschluss verbinden\n",
+      "                    - Sensoren einrichten:\n",
+      "                        - Sensoren aus dem Schutzmodus herausnehmen\n",
+      "                        - Sensoren an den entsprechenden Anschlüssen anordnen\n",
+      "                        - Sensoren wieder in den Schutzmodus stellen\n",
       "\n",
-      "➤ Anklemmen Sie Vor dem Einschalten anschließen für korrekte Erkennung\n",
+      "                Schritt 4: Einrichten der Software und des Programms\n",
       "\n",
-      " USER> gemacht\n",
+      "                Wichtig:\n",
+      "                1. Formulieren Sie präzise Anweisungen in natürlichem Deutsch\n",
+      "                2. Verwenden Sie nummerierte Schritte\n",
+      "                3. Beginnen Sie mit einer kurzen Einleitung\n",
+      "                4. Vermeiden Sie Wiederholungen und Floskeln\n",
       "\n",
-      "Das haben Sie gut gemeistert! Kommen wir zum nächsten Schritt.\n",
+      "                Details zum Schritt:\n",
+      "                Software und Programm einrichten:\n",
+      "                    - Software über USB-Typ-B mit dem Gerät verbinden\n",
+      "                    - Software starten\n",
+      "                    - Software auf \"Start\" klicken\n",
+      "                    - \"Einstellungen\" auswählen\n",
+      "                    - \"Systemeinstellungen\" auswählen\n",
+      "                    - \"EKG\" auswählen\n",
+      "                    - \"\n",
+      "\n",
+      " USER> erledigt\n",
+      "\n",
+      "Alles klar! Gehen wir weiter zum nächsten Schritt.\n",
       "\n",
       " ASISSTANT --- Schritt 3: Einschalten und Systemkonfiguration ---\n",
-      "1. Einschalten:\n",
-      "                    \"Ein/Aus\"-Taste drücken\n",
-      "                2. Selbsttest:\n",
-      "                    Venösen Messkopf sichern\n",
-      "                    Selbsttest durchführen (z.B. EKG, EKG-Akquisition, EKG-Akquisition mit Blutdruckmessung)\n",
-      "                    Selbsttest beenden\n",
-      "                3. Grundeinstellungen konfigurieren:\n",
-      "                    Helligkeit: 60%\n",
-      "                    Lautstärke: 40%\n",
-      "                    Sprache: Deutsch\n",
-      "                    Zeit/Datum: Aktuelles Datum und Uhrzeit\n",
-      "                    Systeminformationen: Software-Version, Betriebsstunden, Batteriestatus anzeigen\n",
-      "                    Key-User-Funktionen: Alarmkonfiguration, Klinikkonfiguration speichern\n",
-      "                4. Klinikkonfiguration:\n",
-      "                    Klinikkonfiguration über den PC-Link oder USB-Stick importieren\n",
-      "                    Klinikkonfiguration speichern\n",
-      "                5. Messkopf:\n",
-      "                    Messkopf einschalten\n",
-      "                    Messkopf-Komfort-Einstellungen konfigurieren\n",
-      "                    Messkopf-Komfort-Einstellungen speichern\n",
-      "                6. Messdaten:\n",
-      "                    Messdaten über den PC-Link oder USB-Stick importieren\n",
-      "                    Messdaten speichern\n",
+      "Folgende Schritte sind für die Einschalten und Systemkonfiguration durchzuführen:\n",
       "\n",
-      "                Bitte beachten Sie:\n",
-      "                - Verwenden Sie ein klares und präzises Sprechen\n",
-      "                - Verwenden Sie keine Fachjargon oder medizinischen Fachbegriffe\n",
-      "                - Verwenden Sie keine Floskeln\n",
-      "                - Seien Sie geduldig und höflich\n",
-      "                - Bitte beachten Sie, dass Ihre Antworten nicht erwartet werden, sondern nur dazu dienen, die Qualität der Antworten zu verbessern.\n",
+      "1. Einschalten Sie Venösen Messkopf vor Einschalten sichern, \"Ein/Aus\"-Taste drücken\n",
       "\n",
-      " USER> fertig\n",
+      "- Einstellen Sie Helligkeit, Lautstärke, Sprache, Zeit/Datum einstellen\n",
       "\n",
-      "Sehr gut! Gehen wir zum nächsten Schritt über.\n",
+      "- Begutachten Sie Software-Version, Betriebsstunden, Batteriestatus kontrollieren\n",
+      "\n",
+      "4. Key-User-Funktionen (passwortgeschützt) Sie:\n",
+      "   - Alarmkonfiguration\n",
+      "   - Klinikkonfiguration speichern\n",
+      "\n",
+      " USER> erledigt\n",
+      "\n",
+      "Perfekt! Weiter geht's mit dem nächsten Punkt.\n",
       "\n",
       " ASISSTANT --- Schritt 4: Anwendungsvorbereitung und Funktionstest ---\n",
-      "Folgende Schritte sind für die Anwendungsvorbereitung und Funktionstest durchzuführen:\n",
+      "Bitte geben Sie die Anweisungen in folgende Struktur ein:\n",
+      "                <ol>\n",
+      "                    <li>Schritt 1: Vorbereitung</li>\n",
+      "                    <li>Schritt 2: Montage</li>\n",
+      "                    <li>Schritt 3: Integration</li>\n",
+      "                    <li>Schritt 4: Funktionstest</li>\n",
+      "                    <li>Schritt 5: Abschluss</li>\n",
+      "                </ol>\n",
       "\n",
-      "✓ Herrichten Sie:\n",
-      "   - Einmalprodukt montieren\n",
-      "   - integrierte Sensorik anschließen\n",
+      "                Bitte geben Sie die Anweisungen in folgende Struktur ein:\n",
+      "                <ol>\n",
+      "                    <li>Schritt 1: Vorbereitung</li>\n",
+      "                    <li>Schritt 2: Montage</li>\n",
+      "                    <li>Schritt 3: Integration</li>\n",
+      "                    <li>Schritt 4: Funktionstest</li>\n",
+      "                    <li>Schritt 5: Abschluss</li>\n",
+      "                </ol>\n",
       "\n",
-      "- Anbringen Sie Fluss-/Blasensensor, Temperatursensoren, Drucksensoren\n",
+      "                Vielen Dank!\n",
       "\n",
-      "- Erledigen Sie:\n",
-      "   - Blasenüberwachung\n",
-      "   - Niveauüberwachung\n",
-      "   - Messkopf-Status prüfen\n",
+      " USER> weiter\n",
       "\n",
-      "✓ Realisieren Sie Nullkalibrierung für Drucksensoren, Fluss-Off-Set-Kalibrierung\n",
-      "\n",
-      "• Abschließende Überprüfung Sie:\n",
-      "   - Sicherheitssiegel\n",
-      "   - Bedienelemente\n",
-      "   - Sensorfunktionen\n",
-      "   - Notantrieb\n",
-      "\n",
-      " USER> ja\n",
-      "\n",
-      "CARDIOHELP-Einrichtung erfolgreich abgeschlossen! Das Gerät ist nun einsatzbereit.\n"
+      "Die Einrichtung des CARDIOHELP-Systems ist nun vollständig abgeschlossen. Das Gerät steht zur Verfügung.\n"
      ]
     }
    ],
